Shiromino Version history
===========================

2018.05.07 beta3-pre1
{
    New Features:
        + Window can be resized arbitrarily larger than the default 640x480
        + Added fullscreen mode and soft fullscreen mode (hotkeys F11 and Shift+F11 respectively)

    Changes/Removed Features:
        * Moved from C to C++
        * Replays are saved to an SQLite database now instead of the filesystem

    Bug Fixes:
        * Fixed I tetromino wallkick behavior
}

beta3
{
    New Features:
        + Window can be resized arbitrarily larger than the default 640x480
        + Added fullscreen mode and soft fullscreen mode (hotkeys F11 and Shift+F11 respectively)

    Changes/Removed Features:
        * Moved from C to C++
        * Replays are saved to an SQLite database now instead of the filesystem
        * Ripped out old menu system and introduced SGUIL, a GUI library for SDL
        * Overhauled and gave significantly more structure to game logic
        * Cleaned up the embarrassing mess of spaghetti code that comprised the Multi-Editor
        * Removed bstrlib dependency

        * V pentomino now floorkicks
        * T pentomino now floorkicks even if airborne

    Bug Fixes:
}

2017.08.23 beta2
{
    New Features:
        + Joystick support (kind of... still very much recommend Joy2Key)
        + "escape" button is now mappable
        + New mode: G1 MASTER
        + New mode: G1 20G
        + New mode: G2 MASTER
        + 3 new backgrounds past level 1000
        + G1 and G2 MASTER grade systems added
        + PENTOMINO grade system added (based on G1 grade system)
        + All grade sprites added
        + Grade and medal animations and grade-up sounds
        + New fonts: font_small.png, font_tiny.png, font_fixedsys_excelsior.png
        + New tetrion graphics
        + Full block face palette in the practice tool
        + New options in the practice tool: infinite floorkicks, lock protection
        + Practice tool UI moved around a bit